gcc/testsuite/rust/rustc/ui/recursion_limit/zero-overflow.rs
// { dg-error "" "" { target *-*-* } }
// { help "" "" { target *-*-* } .-2 }
//@ build-fail

#![recursion_limit = "0"]

fn main() {}

